Sat Dec 22 04:09:23 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/,backends/chert/,backends/flint_lock.cc,
	  common/debuglog.cc,common/replicate_utils.cc,common/safefcntl.h,
	  net/progclient.cc,net/remoteconnection.cc,
	  tests/harness/testsuite.cc: If O_CLOEXEC is supported, pass it to
	  open() so fds we open are closed if the application using us calls
	  exec().

Fri Dec 21 03:48:36 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Don't autodisable the remote backend if we fail to find
	  a required function.  It's more likely the user needs to pass
	  LIBS=-lfoo and it's more helpful to error out so they can do that, or
	  pass --disable-backend-remote if they really don't want it, rather
	  than having them not notice the automatic disabling until after
	  they've built.  This also matches what we do for the disk based
	  backends.

Fri Dec 21 03:48:11 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Expand comment about DJGPP.

Fri Dec 21 03:47:13 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Update comment - we've supported the prog backend on
	  Windows for more than 5 years now!

Fri Dec 21 03:32:13 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Use O_BINARY in replication tests.

Fri Dec 21 03:24:37 GMT 2012  Olly Betts <olly@survex.com>

	* common/replicate_utils.cc: Make posixy_open() always use O_BINARY.
	* backends/brass/brass_btreebase.cc,backends/brass/brass_database.cc,
	  backends/brass/brass_databasereplicator.cc,
	  backends/chert/chert_btreebase.cc,
	  backends/chert/chert_databasereplicator.cc,common/posixy_wrapper.cc:
	  Don't pass O_BINARY to posixy_open() in the places where we were
	  (which wasn't everywhere, probably causing replication bugs under
	  __WIN32__).

Fri Dec 21 02:57:56 GMT 2012  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc,net/remoteconnection.h: Only "outline"
	  RemoteConnection dtor under __WIN32__.
