@@ -30,7 +30,7 @@
 #include <unistd.h>
 #include <cstdlib>
 #include <sys/types.h>
-#include <sys/socket.h>
+#include "safesyssocket.h"
 #include <sys/wait.h>
 #include <signal.h>
 #include <cstring>
